# agente-trading-1

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  test_signal.py
deploy/: setup.sh  zeta-engine.service  zeta-executor.service  zeta.target
deploy/scripts/: check_connections.sh  on_executor_stop.sh  status.sh
docs/: architecture.md
docs/adr/: 0001-julia-rust-stack.md  0002-zeromq-ipc.md  0003-thetadata-databento-split.md  0004-zeta-field-heteroscedasticity.md  0005-single-server-systemd.md  0006-anthropic-tool-use-agent.md  0007-hybrid-rule-engine-llm.md  0008-svi-vol-surface.md
executor/: Cargo.toml  Dockerfile
executor/src/: ipc.rs  main.rs
executor/src/agent/: anthropic.rs  decision.rs  mod.rs  prompt.rs
executor/src/broker/: alpaca.rs  dryrun.rs  mod.rs  tradier.rs  tradovate.rs
executor/src/data/: databento.rs  mod.rs  thetadata.rs
executor/src/execution/: mod.rs
executor/src/orders/: mod.rs  persistence.rs
zeta/: Dockerfile  Project.toml
zeta/src/: ZetaField.jl  ipc.jl  server.jl
zeta/src/data/: chain.jl  databento.jl  thetadata.jl
zeta/src/field/: geometry.jl
zeta/src/greeks/: black76.jl
zeta/src/regime/: detector.jl
zeta/src/strategy/: classifier.jl  rules.jl  sizing.jl
zeta/src/vol/: hv.jl  surface.jl
