[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "executor"
path = "src/main.rs"

[dependencies]
tokio            = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util     = "0.3"
reqwest          = { version = "0.12", features = ["json", "native-tls"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror        = "1"
anyhow           = "1"
uuid             = { version = "1", features = ["v4"] }
chrono           = { version = "0.4", features = ["serde"] }
rust_decimal     = { version = "1", features = ["serde-with-str"] }
dashmap          = "6"
tokio-stream     = "0.1"
async-trait      = "0.1"
base64           = "0.22"
